--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t backend-app:latest .
+             docker build -t backend-app:latest backend/
